fix photo-grid gap

--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -22,6 +22,7 @@
 @media all and (max-width: 767px) {
   .photo-grid {
     width: calc(100% - 32px);
+    gap: 12px;
     margin: 64px auto 0;
   }
 }
